force-app/main/default/objects/SMS_Schedule_SMS_c__c/SMS_Schedule_SMS_c__c.object-meta.xml
<CustomObject>
    <label>SMS Schedule SMS</label>
    <nameField>
        <label>SMS Schedule SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Schedule SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>