force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Context_Record__c.field-meta.xml
<CustomField>
    <fullName>Context_Record__c</fullName>
    <label>Context Record (Lead)</label>
    <type>TextArea</type>
</CustomField>