force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Immediate__c.field-meta.xml
<CustomField>
    <fullName>Immediate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate</label>
    <type>Checkbox</type>
</CustomField>