force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Lookup</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Schedule SMS</relationshipLabel>
    <relationshipName>SMS_Schedule_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>