force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>SMS Text</label>
    <type>TextArea</type>
</CustomField>