force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Message_Sent_from_SFMC__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_from_SFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Message Sent from SFMC</label>
    <type>Checkbox</type>
</CustomField>