force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SMS Schedule SMS</relationshipLabel>
    <relationshipName>SMS_Schedule_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>