force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Project_Interested__c.field-meta.xml
<CustomField>
    <fullName>Project_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Interested</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>SMS Schedule SMS</relationshipLabel>
    <relationshipName>SMS_Schedule_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>