force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/Sender_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sender_Mobile__c</fullName>
    <label>Sender Mobile</label>
    <type>Phone</type>
</CustomField>