force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/SMS_Long_text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Long_text__c</fullName>
    <label>SMS Long text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>