force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Text__c</fullName>
    <label>SMS Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>