force-app/main/default/objects/SMS_Schedule_SMS_c__c/fields/SMS_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Time__c</fullName>
    <label>SMS Time</label>
    <type>DateTime</type>
</CustomField>