force-app/main/default/objects/SMS_Schedule_SMS_c__c/listViews/my_view.listView-meta.xml
<ListView>
    <fullName>my_view</fullName>
    <columns>NAME</columns>
    <columns>SMS_Long_text__c</columns>
    <columns>Sender_Mobile__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>my view</label>
</ListView>